Use strict illegal-access policy on Java 9 and later